# learningdjango

./: Makefile  README.md  pyproject.toml
learningdjango/: settings.py  urls.py
