[tool.poetry]
name = "learningdjango"
version = "0.1.0"
description = ""
authors = ["xojoc <hi@xojoc.pw>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.5"
celery = "^4.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
